--- a/client/home.jade
+++ b/client/home.jade
@@ -3,6 +3,10 @@ template(name='home')
     //-     each currentUser.roles
     //-         strong #{this} &nbsp;
     //-     |portal
+    .ui.left.icon.fluid.input
+        i.search.icon
+        input.model_filter(type='text' placeholder='filter...' autofocus='autofocus')
+    
     .ui.stackable.four.column.padded.grid
         each role_models
             .column
