--- a/client/fields.jade
+++ b/client/fields.jade
@@ -3,7 +3,7 @@ template(name='color_edit')
         .field
             label 
                 if icon
-                    +i name=icon
+                    +i name=icon classes='ui avatar image'                
                 if title
                     |#{title}
                 else if key
@@ -19,7 +19,7 @@ template(name='color_view')
         .field
             label 
                 if icon
-                    +i name=icon
+                    +i name=icon classes='ui avatar image'                
                 if title
                     |#{title}
                 else if key
@@ -46,10 +46,10 @@ template(name='color_icon_edit')
 
 template(name='icon_edit')
     div
-    .ui.right.icon.input
+    .ui.right.icon.fluid.input
+        if icon
+            +i name=icon classes='ui avatar image'
         .ui.inline.header
-            if icon
-                +i name=icon
             if title
                 |#{title}
             else if key
@@ -104,9 +104,9 @@ template(name='link_edit')
 template(name='link_view')
     if field_value
         div
+        if icon
+            +i name=icon classes='ui avatar image'
         .ui.inline.header 
-            if icon
-                +i name=icon
             |#{title}
         a(href=field_value target='_window') #{field_value}
         //- img.ui.fluid.image(src=field_value)
@@ -123,7 +123,7 @@ template(name='image_view')
         //-     |#{key}
         //- else
         //-     |#{this}
-        img.ui.centered.rounded.image(src="{{c.url field_value gravity='face' crop='fit'}}" class=classes)
+        img.ui.centered.rounded.large.image(src="{{c.url field_value gravity='face' crop='fit'}}" class=classes)
         //- a(href="{{c.url field_value gravity='face' crop='fit'}}")
         //-     |download
     //- +call_visual
@@ -178,9 +178,9 @@ template(name='pdf_view')
 
 template(name='image_edit')
     .ui.form
+        if icon
+            +i name=icon classes='ui avatar image'
         .ui.inline.header
-            if icon
-                +i name=icon
             if title
                 |#{title}
             else if label
@@ -220,9 +220,9 @@ template(name='image_link_view')
 template(name='textarea_view')
     if field_value
         div
+        if icon
+            +i name=icon classes='ui avatar image'
         .ui.inline.header
-            if icon
-                +i name=icon
             if title
                 |#{title}
             else if label
@@ -323,7 +323,7 @@ template(name='document_view')
 template(name='text_edit')
     .ui.header
         if icon
-            +i name=icon
+            +i name=icon classes='ui avatar image'
         if title
             |#{title}
         else if label
@@ -337,9 +337,9 @@ template(name='text_edit')
 
 template(name='slug_edit')
     .ui.fluid.icon.input
+        if icon
+            +i name=icon classes='ui avatar image'
         .ui.inline.header
-            if icon
-                +i name=icon
             if title
                 |#{title}
             else if label
@@ -355,9 +355,9 @@ template(name='slug_view')
     if field_value
         unless header
             div
+            if icon
+                +i name=icon classes='ui avatar image'                
             .ui.inline.header
-                if icon
-                    +i name=icon
                 if title
                     |#{title}
                 else if label
@@ -383,9 +383,9 @@ template(name='text_view')
     if field_value
         unless header
             div
+            if icon
+                +i name=icon classes='ui avatar image'                
             .ui.inline.header
-                if icon
-                    +i name=icon
                 if title
                     |#{title}
                 else if label
@@ -404,7 +404,7 @@ template(name='parent_edit')
         .ui.inline.header
             |parent edit
             if icon
-                +i name=icon
+                +i name=icon classes='ui avatar image'
             if title
                 |#{title}
             else if label
@@ -454,9 +454,9 @@ template(name='phone_view')
     if field_value
         unless header
             div
+            if icon
+                +i name=icon classes='ui avatar image'                
             .ui.inline.header
-                if icon
-                    +i name=icon
                 if title
                     |#{title}
                 else if label
@@ -557,9 +557,9 @@ template(name='date_edit')
 template(name='date_view')
     if field_value
         div
+        if icon
+            +i name=icon classes='ui avatar image'
         .ui.inline.header
-            if icon
-                +i name=icon
             if title
                 |#{title}
             else if label
@@ -608,7 +608,7 @@ template(name='datetime_edit')
         .field
             label 
                 if icon
-                    +i name=icon
+                    +i name=icon classes='ui avatar image'                
                 if title
                     |#{title}
                 else if label
@@ -636,9 +636,9 @@ template(name='datetime_view')
 template(name='array_edit')
     div
     .ui.fluid.input
+        if icon
+            +i name=icon classes='ui avatar image'
         .ui.inline.header
-            if icon
-                +i name=icon
             if title
                 |#{title}
             else if label
@@ -657,9 +657,9 @@ template(name='array_edit')
 template(name='array_view')
     if field_value
         div
+        if icon
+            +i name=icon classes='ui avatar image'
         .ui.inline.header
-            if icon
-                +i name=icon
             if title
                 |#{title}
             else if label
@@ -709,9 +709,9 @@ template(name='child_edit')
 template(name='children_view')
     .ui.accordion
         .title
+            if icon
+                +i name=icon classes='ui avatar image'                
             .ui.inline.header
-                if icon
-                    +i name=icon
                 if title
                     |#{title}
                 else if label
@@ -759,10 +759,10 @@ template(name='child_view')
 
 template(name='youtube_edit')
     .ui.labeled.fluid.icon.input
-        .ui.smoothed.label 
+        .ui.basic.label 
             // if icon
             //     i.icon(class=icon)
-            |Youtube Id
+            |youtube id
         input.youtube_id(type='text' value=field_value placeholder=placeholder autocomplete="off")
     if field_value
         iframe(width='560' height='315' src="https://www.youtube.com/embed/#{field_value}" frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
@@ -861,7 +861,7 @@ template(name='single_doc_view')
             |#{title}
         .ui.basic.label
             if icon
-                +i name=icon
+                +i name=icon classes='ui avatar image'
             |#{field_value}
 
 
@@ -1124,7 +1124,7 @@ template(name='multi_doc_input')
 
 template(name='multi_user_view')
     .ui.header 
-        |#{title}
+        |#{title} #{label}
         //- #{key} #{label}
     each field_value
         .ui.stackable.cards
