--- a/client/styles.css
+++ b/client/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Ubuntu', sans-serif !important;
-    font-size: 110% !important;
+    /* font-size: 110% !important; */
     /*line-height: 200% !important;*/
     /*background: #3d3d3d !important;*/
     background: rgba(0, 0, 0, .01) !important
@@ -67,6 +67,7 @@ body {
     -o-transition: all 0.25s ease;
     transition: all 0.25s ease;
     border-radius: 8px !important;
+    margin: 0px !important;
 }
 
 .invert {
@@ -153,7 +154,7 @@ input.username_search{
     background: rgba(250, 250, 250, 0.9) !important;
     opacity: 1;
     border-width: 3px !important;
-    border-color: #a67c00 !important;
+    /* border-color: #a67c00 !important; */
     box-shadow: 0 2px 5px 2px rgba(50, 50, 100, 0.1) !important;
 }
 
@@ -552,10 +553,10 @@ a {
 .scrolling::-webkit-scrollbar {
     display: none;
 }
-
+/*
 .smallscroll::-webkit-scrollbar {
     display: none;
-}
+} */
 
 .topnav{
 	overflow-y:hidden;
