--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -3,13 +3,13 @@ template(name='delta')
         .ui.stackable.padded.grid
             .row
                 .six.wide.column.scrolling
+                    +i name=icon classes='ui avatar image'
                     .ui.inline.header
-                        +i name=icon
                         | #{title}
                     unless is_loading
                         if currentUser
                             .ui.icon.compact.button.add_model_doc(title="Add #{title}")
-                                +i name='plus' classes='ui inline mini image'
+                                +i name='plus' classes='ui avatar image'
                         //- if can_edit
                             //- +edit_circular.button
             
@@ -28,7 +28,7 @@ template(name='delta')
                                 .ui.icon.large.button.print_delta(title='print session doc')
                                     i.code.icon
                             .ui.reset.icon.compact.button(title='reload session')
-                                +i name='refresh' classes='ui mini inline image'
+                                +i name='refresh' classes='ui avatar image'
                             .ui.delete_delta.icon.button(title='delete session')
                                 i.trash.icon
                         else
@@ -59,34 +59,33 @@ template(name='delta')
 template(name='facet')
     if filtering_res
         //- .ui.hidden.divider
-        //- .ui.accordion
-        //-     .active.title
-        .ui.inline.header 
-            if icon
-                //- i.small.icon(class=icon)
-                +i name=icon classes='ui mini inline image'   
-            if title
-                |#{title}
-            else 
-                |#{key}
-                //- i.dropdown.icon
-            //- .active.content
-        //- if is_admin
-        .ui.icon.small.transparent.input
-            i.search.icon
-            input.add_filter(type='text')
-        //- div
-        each filtering_res
-            if name
-                .selector.ui.compact.button.toggle_selection(class=toggle_value_class)
-                    strong #{name}
-                    if is_admin
-                        small #{cal_count} #{count}
-            else
-                .selector.ui.button.toggle_selection(class=toggle_value_class)
-                    strong [null]
-                    //- small #{cal_count}
-        .ui.hidden.divider
+        .ui.accordion
+            .active.title
+                if icon
+                    //- i.small.icon(class=icon)
+                    +i name=icon classes='ui avatar image'   
+                .ui.inline.header 
+                    if title
+                        |#{title}
+                    else 
+                        |#{key}
+                        //- i.dropdown.icon
+                .ui.icon.small.transparent.input
+                    i.search.icon
+                    input.add_filter(type='text')
+            .active.content
+                //- div
+                each filtering_res
+                    if name
+                        .selector.ui.compact.button.toggle_selection(class=toggle_value_class)
+                            strong #{name}
+                            if is_admin
+                                small #{cal_count} #{count}
+                    else
+                        .selector.ui.button.toggle_selection(class=toggle_value_class)
+                            strong [null]
+                            //- small #{cal_count}
+                .ui.hidden.divider
 
 template(name='toggle_delta_config')
     if boolean_true
