--- a/components/maintenance/healthclub.jade
+++ b/components/maintenance/healthclub.jade
@@ -8,16 +8,17 @@ template(name='healthclub')
     img.ui.fluid.image.checkin_banner(src="{{c.url 'grfront' width=1000 height=1000 crop='crop'}}")
     .ui.grid.header-wrapper
         //- +Template.dynamic template=kiosk_view
-        //- .row
-        //-     .sixteen.wide.center.aligned.column
-        //-         img.ui.circular.centered.small.inline.image.shadowed(src="{{c.url 'gold_run_logo' }}")
+        .row
+            .sixteen.wide.center.aligned.column
+                img.ui.circular.centered.small.inline.image.shadowed(src="{{c.url 'gold_run_logo' }}")
         .row
             .sixteen.wide.column
                 .ui.grid
                     .row.checkin_toprow
-                        .two.wide.column
-                            img.ui.circular.centered.small.inline.image.shadowed(src="{{c.url 'gold_run_logo' }}")
-                        .fourteen.wide.column
+                        .sixteen.wide.column
+                            //- .two.wide.column
+                            //-     img.ui.circular.centered.small.inline.image.shadowed(src="{{c.url 'gold_run_logo' }}")
+                            //- .fourteen.wide.column
                             .ui.massive.fluid.left.icon.input
                                 input.username_search(type='text' placeholder='check in resident' autofocus)
                                 if is_query
