--- a/components/maintenance/water.jade
+++ b/components/maintenance/water.jade
@@ -59,7 +59,7 @@ template(name='lower_hot_tub_readings')
         |lower hot tub readings
     #add_lower_hot_tub_reading.ui.big.icon.button
         i.green.plus.icon
-    table.ui.sortable.striped.very.basic.large.table
+    table.ui.striped.very.basic.large.table
         thead
             tr
                 th ph
@@ -91,7 +91,7 @@ template(name='upper_hot_tub_readings')
     #add_upper_hot_tub_reading.ui.big.icon.button
         i.green.plus.icon
     .ui.small.header keep 6 tabs of bromine in filter system at all times.  if a tab has dissolved to less than half its original size, replace.
-    table.ui.sortable.striped.very.basic.large.table
+    table.ui.striped.very.basic.large.table
         thead
             tr
                 th ph
@@ -123,7 +123,7 @@ template(name='pool_readings')
         |pool readings
     #add_pool_reading.ui.big.icon.button
         i.green.plus.icon 
-    table.ui.sortable.striped.very.basic.large.table
+    table.ui.striped.very.basic.large.table
         thead
             tr
                 th ph
