--- a/client/users.jade
+++ b/client/users.jade
@@ -4,7 +4,7 @@ template(name='residents')
             .sixteen.wide.column
                 .ui.left.icon.huge.fluid.input
                     i.search.icon
-                    input.username_search(type='text' placeholder='lookup resident...')
+                    input.username_search(type='text' placeholder='lookup resident...' autofocus='autofocus')
                 .ui.centered.four.stackable.cards
                     each residents
                         +resident
@@ -19,7 +19,7 @@ template(name='users')
                 //-     |users
                 .ui.left.icon.huge.fluid.input
                     i.search.icon
-                    input.username_search(type='text' placeholder='lookup user...')
+                    input.username_search(type='text' placeholder='lookup user...' autofocus='autofocus')
                 .ui.centered.four.stackable.cards
                     each users
                         +user
